// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DedicatedIpSummarySection renders count and cost for aws customers 1`] = `
<Panel.Section
  actions={
    Array [
      Object {
        "Component": [Function],
        "content": "Upgrade Now",
        "to": "/account/billing/plan",
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      2
       for 
      <DedicatedIpCost
        isAWSAccount={true}
        quantity={2}
      />
    </h6>
  </LabelledValue>
</Panel.Section>
`;

exports[`DedicatedIpSummarySection renders count and cost for aws customers with free ip 1`] = `
<Panel.Section
  actions={
    Array [
      Object {
        "Component": [Function],
        "content": "Upgrade Now",
        "to": "/account/billing/plan",
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      3
       for 
      <DedicatedIpCost
        isAWSAccount={true}
        quantity={2}
      />
    </h6>
  </LabelledValue>
</Panel.Section>
`;

exports[`DedicatedIpSummarySection renders count and zero cost 1`] = `
<Panel.Section
  actions={
    Array [
      Object {
        "content": "Add Dedicated IPs",
        "disabled": false,
        "onClick": [Function],
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      1
       for 
      <DedicatedIpCost
        isAWSAccount={false}
        quantity={0}
      />
    </h6>
  </LabelledValue>
</Panel.Section>
`;

exports[`DedicatedIpSummarySection renders disabled add button, count, cost, and max plan notice 1`] = `
<Panel.Section
  actions={
    Array [
      Object {
        "content": "Add Dedicated IPs",
        "disabled": true,
        "onClick": [Function],
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      4
       for 
      <DedicatedIpCost
        isAWSAccount={false}
        quantity={4}
      />
    </h6>
    <p>
      You have reached the maximum allowed.
    </p>
  </LabelledValue>
</Panel.Section>
`;

exports[`DedicatedIpSummarySection renders upgrade button and zero count 1`] = `
<Panel.Section
  actions={
    Array [
      Object {
        "Component": [Function],
        "content": "Upgrade Now",
        "to": "/account/billing/plan",
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      0
    </h6>
  </LabelledValue>
</Panel.Section>
`;

exports[`DedicatedIpSummarySection renders zero count and first is free notice 1`] = `
<Panel.Section
  actions={
    Array [
      Object {
        "content": "Claim Your Free Dedicated IP",
        "disabled": false,
        "onClick": [Function],
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      0
    </h6>
  </LabelledValue>
</Panel.Section>
`;
